new script store-owned.lua and its documentation

--- a/changelog.txt
+++ b/changelog.txt
@@ -27,6 +27,7 @@ Template for new versions:
 # Future
 
 ## New Tools
+- `store-owned`: task owned items to be stored in the owner's room furniture
 
 ## New Features
 
