--- a/changelog.txt
+++ b/changelog.txt
@@ -28,6 +28,106 @@ Template for new versions:
 
 ## New Tools
 - `gui/adv-finder`: UI for tracking historical figures and artifacts in adventure mode
+
+## New Features
+
+## Fixes
+
+## Misc Improvements
+
+## Removed
+
+# 52.03-r2
+
+## New Tools
+- `autotraining`: new tool to assign citizens to a military squad when they need Martial Training
+- `gui/autotraining`: configuration tool for autotraining
+- `entomb`: allow any unit that has a corpse or body parts to be assigned a tomb zone
+
+- `husbandry`: Automatically milk and shear animals at nearby farmer's workshops
+
+## New Features
+- `deathcause`: added functionality to this script to fetch cause of death programatically
+
+## Fixes
+- `ban-cooking`: will not fail trying to ban honey if the world has no honey
+- `confirm`: only show pause option for pausable confirmations
+- `confirm`: when editing a uniform, confirm discard of changes when exiting with Escape
+- `confirm`: when removing a manager order, show correct order description when using non-100% interface setting
+- `confirm`: when removing a manager order, show correct order description after prior order removal or window resize (when scrolled to bottom of order list)
+- `confirm`: when removing a manager order, show specific item/job type for ammo, shield, helm, gloves, shoes, trap component, and meal orders
+- `confirm`: the pause option now pauses individual confirmation types, allowing multiple different confirmations to be paused independently
+- `immortal-cravings`: prioritize high-value meals, properly split of portions, and don't go eating or drinking on a full stomach
+- `uniform-unstick`: no longer causes units to equip multiples of assigned items
+- `caravan`: in the pedestal item assignment dialog, add new items at the end of the list of displayed items instead of at a random position
+- `caravan`: in the pedestal item assignment dialog, consistently remove items from the list of displayed items
+
+## Misc Improvements
+- `devel/hello-world`: updated to show off the new Slider widget
+
+## Removed
+
+# 52.03-r1
+
+## New Tools
+
+## New Features
+
+## Fixes
+- `make-legendary`: ``make-legendary all`` will no longer corrupt souls
+
+## Misc Improvements
+
+## Removed
+
+# 52.02-r2
+
+## New Tools
+
+## New Features
+- `gui/mod-manager`: now supports arena mode
+
+## Fixes
+- `gui/mod-manager`: gracefully handle vanilla mods with different versions from the user's preset
+- `gui/mod-manager`: hide other versions of loaded mods and unhides them when unloaded
+
+## Misc Improvements
+
+## Removed
+
+# 52.02-r1
+
+## New Tools
+
+## New Features
+
+## Fixes
+- ``embark-anyone``: validate viewscreen before using, avoids a crash
+
+## Misc Improvements
+
+## Removed
+
+# 52.01-r1
+
+## New Tools
+
+## New Features
+
+## Fixes
+- fixed references to removed ``unit.curse`` compound
+- `gui/gm-unit`: remove reference to ``think_counter``, removed in v51.12
+- `gui/journal`: fix typo which caused the table of contents to always be regenerated even when not needed
+- `gui/mod-manager`: gracefully handle mods with missing or broken ``info.txt`` files
+- `uniform-unstick`: resolve overlap with new buttons in 51.13
+
+## Misc Improvements
+
+## Removed
+
+# 51.12-r1
+
+## New Tools
 - `deteriorate`: (reinstated) allow corpses, body parts, food, and/or damaged clothes to rot away
 - `modtools/moddable-gods`: (reinstated) create new deities from scratch
 
@@ -44,8 +144,6 @@ Template for new versions:
 
 ## Misc Improvements
 - `remove-stress`: also applied to long-term stress, immediately removing stressed and haggard statuses
-
-## Removed
 
 # 51.11-r1
 
