uniform-unstick print separator line in correct place When the --all and --drop command-line parameters are used together, each unit's report should be separated by a blank line. Due to the print-code refactor in #1490, this separator line was moved between each unit's basic report and the unit's list of dropped items.

--- a/changelog.txt
+++ b/changelog.txt
@@ -35,6 +35,7 @@ Template for new versions:
 - `uniform-unstick`: the ``--drop`` option now only evaluates clothing as possible items to drop
 - `uniform-unstick`: the ``--free`` option no longer redundantly reports an improperly assigned item when that item is removed from a uniform
 - `uniform-unstick`: the ``--drop`` and ``--free`` options now only drop items which are actually in a unit's inventory
+- `uniform-unstick`: the ``--all`` and ``--drop`` options, when used together, now print the separator line between each unit's report in the proper place
 
 ## Misc Improvements
 
