--- a/changelog.txt
+++ b/changelog.txt
@@ -31,6 +31,18 @@ Template for new versions:
 ## New Features
 
 ## Fixes
+
+## Misc Improvements
+
+## Removed
+
+# 52.05-r2
+
+## New Tools
+
+## New Features
+
+## Fixes
 - `fix/archery-practice`: now splits instead of combining ammo items in quivers, and moves quivers to end of unit's inventory list
 
 ## Misc Improvements
