--- a/changelog.txt
+++ b/changelog.txt
@@ -27,6 +27,7 @@ Template for new versions:
 # Future
 
 ## New Tools
+- `resize-armor`: resize armor or clothing item to any creature size.
 
 ## New Features
 
