Use correct stairtype for single-layer stair designations

--- a/changelog.txt
+++ b/changelog.txt
@@ -32,6 +32,7 @@ Template for new versions:
 ## New Features
 
 ## Fixes
+- `gui/design`: designating a single-level stair construction now properly follows the selected stair type.
 
 ## Misc Improvements
 
