Properly check disabled state of training squad
The value of the training_squad state was being ignored, despite being used by
the ui to distinguish between being enabled, or being disabled.
This caused later disabled squads to remain in the pool of training
squads.

--- a/changelog.txt
+++ b/changelog.txt
@@ -33,6 +33,7 @@ Template for new versions:
 ## New Features
 
 ## Fixes
+- `autotraining`: squads once used for training then disabled now properly are treated as disabled.
 
 ## Misc Improvements
 
