--- a/changelog.txt
+++ b/changelog.txt
@@ -38,6 +38,7 @@ Template for new versions:
 ## Misc Improvements
 
 ## Removed
+- `fix/archery-practice`: removed from the control panel's bug fixes tab.
 
 # 52.05-r2
 
