Documentation for gui/siegemanager

--- a/changelog.txt
+++ b/changelog.txt
@@ -27,6 +27,7 @@ Template for new versions:
 # Future
 
 ## New Tools
+- `gui/siegemanager`: manage your siege engines at a glance.
 
 ## New Features
 
