combine.lua try harder to find the currently-selected stockpile If a stockpile is not selected, try finding it using these: * If an item is selected, find the stockpile (if any) that it is in. * If a dwarfmode/ViewSheets/ITEM_LIST is active in the UI, find the   stockpile (if any) of the tile being viewed.

--- a/changelog.txt
+++ b/changelog.txt
@@ -33,6 +33,7 @@ Template for new versions:
 ## Fixes
 
 ## Misc Improvements
+- `combine`: try harder to find the currently-selected stockpile
 
 ## Removed
 
