add new tool fix/codex-pages

--- a/changelog.txt
+++ b/changelog.txt
@@ -13,6 +13,7 @@ that repo.
 Template for new versions:
 
 ## New Tools
+- `fix/codex-pages`: add pages to written content that have unspecified page counts.
 
 ## New Features
 
