--- a/changelog.txt
+++ b/changelog.txt
@@ -28,6 +28,7 @@ Template for new versions:
 # Future
 
 ## New Tools
+- `gui/keybinds`: gui for managing and saving custom keybindings
 
 ## New Features
 
