--- a/changelog.txt
+++ b/changelog.txt
@@ -29,6 +29,7 @@ Template for new versions:
 ## New Tools
 
 ## New Features
+- `gui/notify`: new notification type: missing nemesis records; displays a warning message and some recommended steps to test for game corruption.
 
 ## Fixes
 
