--- a/changelog.txt
+++ b/changelog.txt
@@ -33,6 +33,7 @@ Template for new versions:
 ## Fixes
 
 ## Misc Improvements
+- `gui/notify`: reduced severity of the missing nemesis records warning if no units on the map are affected.  clarified wording.
 
 ## Removed
 
